tests/snapshots/cli__gen_bin@programs__ex.my.snap
---
source: tests/cli.rs
info:
  program: ex.my.out
  args: []
input_file: tests/input/programs/ex.my
---
success: true
exit_code: 0
----- stdout -----
55

----- stderr -----
